--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 	<!-- the entire body must be written by student -->
 	<nav>
 		<ul>
-	<li><a href=""</a>home</a></li>
-	<li><a href=""</a>outside</a></li>
-   <li><a href=""</a>theatre</a></li>
+	<li><a href="https://www.google.com/"</a>home</a></li>
+	<li><a href="https://www.google.com/"</a>outside</a></li>
+   <li><a href="https://www.google.com/"</a>theatre</a></li>
 		   <h1>3 random audios</h1>
 			<audio src=" http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"controls></audio>
 			<audio src=" http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"controls></audio>
