--- a/main.html
+++ b/main.html
@@ -13,6 +13,8 @@
 	<li><a href="https://www.google.com/"</a>home</a></li>
 	<li><a href="https://www.google.com/"</a>outside</a></li>
    <li><a href="https://www.google.com/"</a>theatre</a></li>
+		</ul>
+	</nav>
 		   <h1>3 random audios</h1>
 			<audio src=" http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"controls></audio>
 			<audio src=" http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"controls></audio>
